--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "fs-promise": "^0.5.0",
+    "lodash": "^4.12.0",
     "minimist": "^1.2.0",
     "open": "0.0.5",
     "titlecase": "^1.1.2"
@@ -21,5 +22,8 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.1.1",
     "tape": "^4.5.1"
+  },
+  "bin": {
+    "git-issue": "./bin/cli.js"
   }
 }
