Add fields to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "git-issue",
   "version": "0.0.1",
-  "description": "",
+  "description": "Cli for creating github issues from templates",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +25,20 @@
   },
   "bin": {
     "git-issue": "./bin/cli.js"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/voltrevo/git-issue.git"
+  },
+  "keywords": [
+    "git",
+    "issue",
+    "task",
+    "template",
+    "create"
+  ],
+  "bugs": {
+    "url": "https://github.com/voltrevo/git-issue/issues"
+  },
+  "homepage": "https://github.com/voltrevo/git-issue#readme"
 }
