--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Andrew Morris",
   "license": "MIT",
   "dependencies": {
+    "abstract-fs": "0.0.3",
     "fs-promise": "^0.5.0",
     "lodash": "^4.12.0",
     "minimist": "^1.2.0",
